fixed spacing

--- a/hello.css
+++ b/hello.css
@@ -37,7 +37,7 @@ h1 {
 }
 
 .main {
-        height: 400px;
+        height: 430px;
 }
 
 .info {
